# Aeon-V2

./: .gitignore  README.md
.github/workflows/: ci.yml
deploy/: aeon-mesh-peer.service  aeon-server.service  aeon.env.example  install.sh
docs/: api.md  architecture.md  deployment.md  memory-model.md
docs/superpowers/plans/: 2026-07-03-phase1-core-port.md  2026-07-03-phase2-agent-loop.md  2026-07-04-phase3-skills-research.md  2026-07-05-phase4-mesh.md  2026-07-05-phase7-skill-forge.md
server/: pyproject.toml
server/src/aeon/: __init__.py  cli.py
server/src/aeon/agent/: __init__.py  approvals.py  journal.py  loop.py
server/src/aeon/api/: __init__.py  app.py  sessions.py  task_runs.py
server/src/aeon/core/: config.py  manifest_agent.py  self_inspection_agent.py  tools.py
server/src/aeon/mesh/: __init__.py  client.py  peer.py
server/src/aeon/models/: __init__.py  client.py  router.py
server/src/aeon/research/: __init__.py  pipeline.py
server/src/aeon/skills/: __init__.py  forge.py  learn.py  store.py
server/src/aeon/tools/: __init__.py  arr.py  crypto.py  fs.py  lab_health.py  memory.py  mesh.py  models.py  planning.py  qbittorrent.py  safecli.py  services.py  shell.py  skills.py  snifferops.py  ssh.py  vault.py  web.py
server/tests/: conftest.py  test_agent_loop.py  test_agent_orchestrator.py  test_aging.py  test_api.py  test_approvals.py  test_arr.py  test_builtin_tools.py  test_chat_cli.py  test_cli_skills.py  test_confidence_adjustment.py  test_consolidation.py  test_conversation.py  test_data_root.py  test_embeddings.py  test_evaluate.py  test_feedback.py  test_hardware_auth_provider.py  test_integration.py  test_lab_health.py  test_launcher_dashboard.py  test_layer3.py  test_layer7.py  test_llm.py  test_lmstudio_parallel.py  test_manifest_agent.py  test_media.py  test_memory_store.py  test_mesh_client.py  test_mesh_dispatch.py  test_mesh_peer.py  test_models_client.py  test_models_router.py  test_music_executor.py  test_music_routing.py  test_qbittorrent.py  test_reflection_failures.py  test_reflection_maintenance.py  test_research.py  test_runtime.py  (+16 more)
web/: index.html  vite.config.ts
web/public/: manifest.webmanifest  sw.js
web/src/: App.tsx  api.ts  app.css  main.tsx  theme.css
web/src/components/: Waveform.tsx
(+12 files in other folders)
