[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "aeon"
version = "2.0.0a1"
description = "Aeon-V2 — self-hosted local-first AI workspace"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["memory", "AI", "agents", "local-first", "obsidian"]
dependencies = ["fastapi>=0.110", "uvicorn>=0.29"]

[project.optional-dependencies]
dev = ["pytest>=7.4", "tzdata>=2024.1", "httpx>=0.27"]
hardware = ["pyserial>=3.5"]

[project.scripts]
aeon-init-data = "aeon.cli:init_data"
aeon-lint-skills = "aeon.cli:lint_skills"
aeon-add-skill = "aeon.cli:add_skill"
aeon-seed-runtime-skills = "aeon.cli:seed_runtime_skills"
aeon-server = "aeon.api.app:main"
aeon-mesh-peer = "aeon.mesh.peer:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
